--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
         "url": "https://github.com/dpjanes/homestar-denon-avr/issues"
     }, 
     "dependencies": {
-        "homestar": ">=0.0.46", 
+        "iotdb": ">=0.0.46", 
         "mdns": "~2.2.6"
     }, 
     "description": "HomeStar / IOTDB Bridge for Denon AVR", 
