--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
         "url": "https://github.com/dpjanes/homestar-denon-avr/issues"
     }, 
     "dependencies": {
-        "mdns": "~2.2.8"
+        "avahi-mdns-kludge": "~0.0.3"
     }, 
     "description": "HomeStar / IOTDB Bridge for Denon AVR", 
     "devDependencies": {
@@ -23,6 +23,9 @@
     "license": "Apache-2.0", 
     "main": "index.js", 
     "name": "homestar-denon-avr", 
+    "optionalDependencies": {
+        "mdns": "~2.2.8"
+    }, 
     "peerDependencies": {
         "iotdb": ">=0.5.12"
     }, 
