--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
         "url": "https://github.com/dpjanes/homestar-denon-avr/issues"
     }, 
     "dependencies": {
-        "avahi-mdns-kludge": "~0.0.4"
+        "avahi-mdns-kludge": "~0.0.4", 
+        "iotdb": ">=0.10.0"
     }, 
     "description": "HomeStar / IOTDB Bridge for Denon AVR", 
     "devDependencies": {
         "grunt": "~0.4.5", 
-        "grunt-contrib-jshint": "~0.10.0", 
-        "grunt-contrib-nodeunit": "~0.2.0", 
-        "grunt-contrib-uglify": "~0.5.0", 
-        "grunt-contrib-watch": "~0.5.0", 
-        "grunt-jsbeautifier": "^0.2.7", 
-        "jshint-stylish": "~0.1.3", 
-        "load-grunt-tasks": "~0.2.0", 
-        "request": "^2.36.0"
+        "grunt-contrib-jshint": "~0.11.3", 
+        "grunt-contrib-nodeunit": "~0.4.1", 
+        "grunt-contrib-uglify": "~0.9.2", 
+        "grunt-contrib-watch": "~0.6.1", 
+        "grunt-jsbeautifier": "~0.2.10", 
+        "jshint-stylish": "~2.0.1", 
+        "load-grunt-tasks": "~3.2.0", 
+        "request": "~2.62.0"
     }, 
     "homepage": "https://homestar.io", 
     "homestar": {}, 
@@ -26,9 +27,6 @@
     "optionalDependencies": {
         "mdns": "~2.2.8"
     }, 
-    "peerDependencies": {
-        "iotdb": "~0.9.1"
-    }, 
     "private": false, 
     "repository": {
         "type": "git", 
@@ -37,5 +35,5 @@
     "scripts": {
         "test": "grunt"
     }, 
-    "version": "0.1.6"
+    "version": "0.1.8"
 }
