--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
         "grunt-contrib-watch": "~0.6.1", 
         "grunt-jsbeautifier": "~0.2.10", 
         "jshint-stylish": "~2.0.1", 
-        "load-grunt-tasks": "~3.2.0", 
-        "request": "~2.62.0"
+        "load-grunt-tasks": "~3.3.0", 
+        "request": "~2.63.0"
     }, 
     "homepage": "https://homestar.io", 
     "homestar": {}, 
@@ -25,6 +25,7 @@
     "main": "index.js", 
     "name": "homestar-denon-avr", 
     "optionalDependencies": {
+        "iotdb-upnp": "~0.0.9", 
         "mdns": "~2.2.8"
     }, 
     "private": false, 
@@ -35,5 +36,5 @@
     "scripts": {
         "test": "grunt"
     }, 
-    "version": "0.1.9"
+    "version": "0.1.11"
 }
